[tool.poetry]
name = "crepitus"
version = "0.1.0"
description = ""
authors = ["Christian Pérez Villanueva <perez.villanueva.christian34@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.2"
py-cord = {git = "https://github.com/Pycord-Development/pycord.git"}
ethereum-gasprice = "^1.3.0"
web3 = "^5.26.0"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
wemake-python-styleguide = "^0.16.1"
pre-commit = "^2.18.1"
mypy = "^0.942"
types-aiofiles = "^0.8.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "aiofiles.*"
]
